<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/user_icon"
                app:civ_border_color="@color/trout"
                app:civ_border_width="5dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_user"
                    android:textColor="@color/gray_suit"/>

                <TextView
                    android:id="@+id/tv_user_jurusan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jurusan_user"
                    android:textColor="@color/gray_suit"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nim_user"
                    android:textColor="@color/gray_suit"/>

            </LinearLayout>

        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>
</androidx.coordinatorlayout.widget.CoordinatorLayout>