<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ship_gray"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="209dp"
        android:layout_height="57dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_login" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_in"
        android:textColor="@color/white65"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="292dp"
        android:layout_height="50dp"
        android:layout_marginTop="42dp"
        android:textColorHint="@color/cutty_shark70"
        app:boxStrokeColor="@color/bazaar70"
        app:hintTextColor="@color/cutty_shark70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:startIconDrawable="@drawable/ic_account">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ship_gray"

            android:hint="@string/nim"
            android:textColor="@color/cutty_shark70"
            android:textColorHint="@color/cutty_shark70"
            android:textCursorDrawable="@drawable/custom_cursor_login" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textColorHint="@color/cutty_shark70"
        app:boxStrokeColor="@color/bazaar70"
        app:hintTextColor="@color/cutty_shark70"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@color/ship_gray"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/cutty_shark70"
            android:textColorHint="@color/cutty_shark70"
            android:textCursorDrawable="@drawable/custom_cursor_login" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/curious_blue"
        android:fontFamily="@font/poppins"
        android:text="@string/login"
        android:textColor="@color/white"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:id="@+id/btn_forget_password"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/poppins"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/edge_water50"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>